--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <body>
         <p>Dev4Tools example file</p>
         <p>Testaillaas
+        <p>Automaation testausta</p>
         </p>
     </body>
 </html>
