--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
         <p>Dev4Tools example file</p>
         <p>Testaillaas
         <p>Automaation testausta</p>
+        <p>Uudestaan</p>
         </p>
     </body>
 </html>
