--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
         <p>Testaillaas
         <p>Automaation testausta</p>
         <p>Uudestaan</p>
+        <p>Githubin testausta</p>
         </p>
     </body>
 </html>
