--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
         <p>Automaation testausta</p>
         <p>Uudestaan</p>
         <p>Githubin testausta</p>
+        <p>Testi 19.04.2025</p>
         </p>
     </body>
 </html>
