--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
         <p>Uudestaan</p>
         <p>Githubin testausta</p>
         <p>Testi 19.04.2025</p>
+        <p>Testi 2 - 19.04.</p>
         </p>
     </body>
 </html>
