--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
         <p>Githubin testausta</p>
         <p>Testi 19.04.2025</p>
         <p>Testi 2 - 19.04.</p>
+        <p>Lab 4 testi</p>
         </p>
     </body>
 </html>
